// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly creates default environment in dev mode.: env properties 1`] = `
Array [
  Array [
    "homeDir",
    "/test/cwd",
  ],
  Array [
    "configDir",
    "/test/cwd/config",
  ],
  Array [
    "corePluginsDir",
    "/test/cwd/core_plugins",
  ],
  Array [
    "binDir",
    "/test/cwd/bin",
  ],
  Array [
    "logDir",
    "/test/cwd/log",
  ],
  Array [
    "staticFilesDir",
    "/test/cwd/ui",
  ],
  Array [
    "cliArgs",
    Object {
      "dev": true,
      "someArg": 1,
      "someOtherArg": "2",
    },
  ],
  Array [
    "configs",
    Array [
      "/test/cwd/config/kibana.yml",
    ],
  ],
  Array [
    "isDevClusterMaster",
    true,
  ],
  Array [
    "mode",
    Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
  ],
  Array [
    "packageInfo",
    Object {
      "branch": "some-branch",
      "buildNum": 9007199254740991,
      "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
      "version": "some-version",
    },
  ],
  Array [
    "legacy",
    EventEmitter {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "domain": null,
    },
  ],
]
`;

exports[`correctly creates default environment in prod distributable mode.: env properties 1`] = `
Array [
  Array [
    "homeDir",
    "/test/cwd",
  ],
  Array [
    "configDir",
    "/test/cwd/config",
  ],
  Array [
    "corePluginsDir",
    "/test/cwd/core_plugins",
  ],
  Array [
    "binDir",
    "/test/cwd/bin",
  ],
  Array [
    "logDir",
    "/test/cwd/log",
  ],
  Array [
    "staticFilesDir",
    "/test/cwd/ui",
  ],
  Array [
    "cliArgs",
    Object {
      "dev": false,
      "someArg": 1,
      "someOtherArg": "2",
    },
  ],
  Array [
    "configs",
    Array [
      "/some/other/path/some-kibana.yml",
    ],
  ],
  Array [
    "isDevClusterMaster",
    false,
  ],
  Array [
    "mode",
    Object {
      "dev": false,
      "name": "production",
      "prod": true,
    },
  ],
  Array [
    "packageInfo",
    Object {
      "branch": "feature-v1",
      "buildNum": 100,
      "buildSha": "feature-v1-build-sha",
      "version": "v1",
    },
  ],
  Array [
    "legacy",
    EventEmitter {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "domain": null,
    },
  ],
]
`;

exports[`correctly creates default environment in prod non-distributable mode.: env properties 1`] = `
Array [
  Array [
    "homeDir",
    "/test/cwd",
  ],
  Array [
    "configDir",
    "/test/cwd/config",
  ],
  Array [
    "corePluginsDir",
    "/test/cwd/core_plugins",
  ],
  Array [
    "binDir",
    "/test/cwd/bin",
  ],
  Array [
    "logDir",
    "/test/cwd/log",
  ],
  Array [
    "staticFilesDir",
    "/test/cwd/ui",
  ],
  Array [
    "cliArgs",
    Object {
      "dev": false,
      "someArg": 1,
      "someOtherArg": "2",
    },
  ],
  Array [
    "configs",
    Array [
      "/some/other/path/some-kibana.yml",
    ],
  ],
  Array [
    "isDevClusterMaster",
    false,
  ],
  Array [
    "mode",
    Object {
      "dev": false,
      "name": "production",
      "prod": true,
    },
  ],
  Array [
    "packageInfo",
    Object {
      "branch": "feature-v1",
      "buildNum": 9007199254740991,
      "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
      "version": "v1",
    },
  ],
  Array [
    "legacy",
    EventEmitter {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "domain": null,
    },
  ],
]
`;

exports[`correctly creates environment with constructor.: env properties 1`] = `
Array [
  Array [
    "homeDir",
    "/some/home/dir",
  ],
  Array [
    "configDir",
    "/some/home/dir/config",
  ],
  Array [
    "corePluginsDir",
    "/some/home/dir/core_plugins",
  ],
  Array [
    "binDir",
    "/some/home/dir/bin",
  ],
  Array [
    "logDir",
    "/some/home/dir/log",
  ],
  Array [
    "staticFilesDir",
    "/some/home/dir/ui",
  ],
  Array [
    "cliArgs",
    Object {
      "dev": false,
      "someArg": 1,
      "someOtherArg": "2",
    },
  ],
  Array [
    "configs",
    Array [
      "/some/other/path/some-kibana.yml",
    ],
  ],
  Array [
    "isDevClusterMaster",
    false,
  ],
  Array [
    "mode",
    Object {
      "dev": false,
      "name": "production",
      "prod": true,
    },
  ],
  Array [
    "packageInfo",
    Object {
      "branch": "feature-v1",
      "buildNum": 100,
      "buildSha": "feature-v1-build-sha",
      "version": "v1",
    },
  ],
  Array [
    "legacy",
    EventEmitter {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "domain": null,
    },
  ],
]
`;
